--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ nav a{
 }
 
 .featured-card-container {
-    width: 1000px;
+    max-width: 1000px;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -91,7 +91,7 @@ figcaption {
 }
 
 #locations {
-    height: 500px;
+    min-height: 500px;
     background-image: url(images/img-locations-background.jpg);
     background-position: center;
     align-items: center;
@@ -104,7 +104,8 @@ figcaption {
     display: flex;
     justify-content: space-around;
     gap: 40px;
-
+    flex-wrap: wrap;
+    padding: 40px 0;
 }
 
 .location-card {
